# stapler-squad

./: .bazelrc  .gitignore  .golangci.yml  .golangciignore  .goreleaser.yaml  .tool-versions  BUILD.bazel  CLA.md  CLAUDE.md  COMMAND_VERIFICATION.md  CONTRIBUTING.md  MODULE.bazel  Makefile  PERFORMANCE_OPTIMIZATIONS.md  README.md  SQLITE_MIGRATION_STRATEGY.md  TESTING-RESULTS.md  TODO.md  TODO.md.bak  buf.gen.yaml  buf.yaml  claude-mux  coverage.out  go.mod  go.sum  install.sh  main.go
cmd/: BUILD.bazel  README.md  bridge_test.go  categories.go  config_integration_test.go  contexts.go  init.go  migrate_data.go  migrate_global.go  migration.go  permissions.go  registry.go
cmd/claude-mux/: main.go
cmd/cmd_test/: BUILD.bazel
cmd/commands/: BUILD.bazel  get_session.go  git.go  navigation.go  organization.go  pty.go  session.go  system.go  vc.go
cmd/help/: generator.go
cmd/interfaces/: BUILD.bazel  registry.go  types.go
cmd/state/: manager.go
config/: BUILD.bazel  claude.go  claude_test.go  config.go  config_categories_test.go  config_test.go  discovery.go  state.go  state_service.go  workspace_meta.go
daemon/: BUILD.bazel  daemon.go
executor/: BUILD.bazel  circuit_breaker.go  executor.go  registry.go  timeout_executor_test.go
github/: BUILD.bazel  client.go  clone.go  url_parser.go  url_parser_test.go
log/: BUILD.bazel  README.md  log.go  log_test.go
server/: BUILD.bazel  dependencies.go  dependencies_test.go  review_queue_manager.go  review_queue_manager_test.go  server.go  tls.go
server/adapters/: BUILD.bazel  instance_adapter.go  review_queue_adapter.go
server/analytics/: BUILD.bazel  escape_code_descriptions.go  escape_code_parser.go  escape_code_parser_test.go  escape_code_store.go
server/auth/: BUILD.bazel  handlers.go  qrcode.go  session.go  setup.go  store.go  user.go  webauthn.go
server/compression/: BUILD.bazel  lzma.go
server/crew/: earpiece.go  fixer.go  lookout.go  sweep.go  sweep_test.go  sweep_types.go
server/events/: BUILD.bazel  bus.go  bus_bench_test.go  bus_test.go  subscriber.go  types.go
server/middleware/: BUILD.bazel  auth.go  cors.go  gzip.go  logging.go  static.go
server/notifications/: BUILD.bazel  store.go  store_test.go  subscriber.go  subscriber_test.go
server/protocol/: BUILD.bazel  envelope.go  envelope_test.go
server/push/: subscriber.go
server/services/: BUILD.bazel  analytics_store.go  approval_handler.go  approval_handler_integration_test.go  approval_service.go  approval_store.go  circuit_breaker_handler.go  classifier.go  classifier_test.go  claude_settings_parser.go  command_parser.go  config_service.go  connectrpc_websocket.go  connectrpc_websocket.go.bak  connectrpc_websocket.go.bak2  connectrpc_websocket.go.before_cursor_fix  connectrpc_websocket_test.go  database_service.go  debug_snapshot.go  domain_checker.go  escape_code_handler.go  event_converter.go  exec_unix.go  exec_windows.go  external_websocket.go  github_service.go  notification_history_service.go  notification_service.go  notification_service_test.go  push_handler.go  push_service.go  rate_limiter.go  rate_limiter_test.go  review_queue_service.go  rules_service.go  rules_store.go  search_service.go  secret_scanner.go  secret_scanner_test.go  session_service.go  (+4 more)
server/ssp/: BUILD.bazel  client_state.go  coordinator.go  echo_history.go
server/terminal/: BUILD.bazel  delta.go  delta_test.go  line_ring_buffer.go  line_ring_buffer_test.go  state.go  state_test.go
server/web/: BUILD.bazel  embed.go
session/: BUILD.bazel  api_design_proposal.md  approval_automation.go  approval_automation_test.go  approval_detector.go  approval_detector_test.go  approval_policy.go  approval_policy_test.go  bm25.go  bm25_test.go  circular_buffer.go  circular_buffer_test.go  claude_command_builder.go  claude_controller.go  claude_controller_test.go  claude_session_manager.go  claude_status_patterns.yaml  command_executor.go  command_executor_test.go  command_history.go  command_history_test.go  command_queue.go  command_queue_test.go  comprehensive_session_creation_test.go  context_options.go  contexts.go  controller_manager.go  document_store.go  ent_repository.go  ent_repository_test.go  external_approval.go  external_discovery.go  external_streamer.go  external_tmux_streamer.go  git_worktree_manager.go  health.go  health_test.go  history.go  idle_detector.go  idle_detector_test.go  (+55 more)
session/detection/: BUILD.bazel  approval.go  detector.go  detector_opencode_test.go  detector_test.go  idle.go  idle_test.go  input_required_test.go
session/ent/: BUILD.bazel  claudemetadata.go  claudemetadata_create.go  claudemetadata_delete.go  claudemetadata_query.go  claudemetadata_update.go  claudesession.go  claudesession_create.go  claudesession_delete.go  claudesession_query.go  claudesession_update.go  client.go  diffstats.go  diffstats_create.go  diffstats_delete.go  diffstats_query.go  diffstats_update.go  ent.go  mutation.go  runtime.go  session.go  session_create.go  session_delete.go  session_query.go  session_update.go  tag.go  tag_create.go  tag_delete.go  tag_query.go  tag_update.go  tx.go  worktree.go  worktree_create.go  worktree_delete.go  worktree_query.go  worktree_update.go
session/framebuffer/: BUILD.bazel  diff.go  diff_test.go
session/git/: BUILD.bazel  diff.go  util.go  worktree.go  worktree_git.go  worktree_ops.go
session/mux/: BUILD.bazel  autodiscover.go  autodiscover_test.go  example_autodiscover_usage.go  hooks.go  multiplexer.go  picker.go  protocol.go
session/queue/: BUILD.bazel  queue.go
session/scrollback/: BUILD.bazel  buffer.go  buffer_test.go  manager.go  storage.go
session/search/: BUILD.bazel  bm25.go  bm25_test.go  document_store.go  engine.go  snippet.go  (+9 more)
telemetry/: BUILD.bazel  attributes.go  telemetry.go
terminal/: BUILD.bazel  compat.go  signals.go  size.go
testutil/: BUILD.bazel  expect.go  expect_test.go  mocks.go  session.go  teatest_helpers.go  teatest_test.go  tmux.go  tmux_integration_test.go  tmux_polling_test.go  tui_exit_test.go  tui_session_creation_test.go  tui_shutdown_diagnostic_test.go  wait.go
(+684 files in other folders)
