module(
    name = "stapler-squad",
    version = "0.0.1",
)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.48.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "cc_mvdan_sh_v3",
    "com_connectrpc_connect",
    "com_connectrpc_otelconnect",
    "com_github_atotto_clipboard",
    "com_github_bufbuild_buf",
    "com_github_bufbuild_connect_go",
    "com_github_charmbracelet_bubbles",
    "com_github_charmbracelet_bubbletea",
    "com_github_charmbracelet_lipgloss",
    "com_github_charmbracelet_x_exp_teatest",
    "com_github_creack_pty",
    "com_github_fsnotify_fsnotify",
    "com_github_go_git_go_git_v5",
    "com_github_go_webauthn_webauthn",
    "com_github_gofrs_flock",
    "com_github_google_uuid",
    "com_github_gorilla_websocket",
    "com_github_klauspost_compress",
    "com_github_mattn_go_runewidth",
    "com_github_mattn_go_sqlite3",
    "com_github_muesli_ansi",
    "com_github_muesli_reflow",
    "com_github_muesli_termenv",
    "com_github_netflix_go_expect",
    "com_github_sahilm_fuzzy",
    "com_github_schollz_closestmatch",
    "com_github_skip2_go_qrcode",
    "com_github_spaolacci_murmur3",
    "com_github_spf13_cobra",
    "com_github_stretchr_testify",
    "com_github_ulikunitz_xz",
    "com_github_xeipuuv_gojsonschema",
    "in_gopkg_natefinch_lumberjack_v2",
    "in_gopkg_yaml_v3",
    "io_entgo_ent",
    "io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_trace",
    "org_golang_google_protobuf",
    "org_golang_x_net",
    "org_golang_x_sys",
    "org_golang_x_term",
    "org_golang_x_time",
    "org_uber_go_zap",
)
