load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "daemon",
    srcs = [
        "daemon.go",
        "daemon_unix.go",
        "daemon_windows.go",
    ],
    importpath = "github.com/tstapler/stapler-squad/daemon",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//log",
        "//session",
        "@com_github_fsnotify_fsnotify//:fsnotify",
    ] + select({
        "@rules_go//go/platform:windows": [
            "@org_golang_x_sys//windows",
        ],
        "//conditions:default": [],
    }),
)
