load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "log",
    srcs = ["log.go"],
    importpath = "github.com/tstapler/stapler-squad/log",
    visibility = ["//visibility:public"],
    deps = ["@in_gopkg_natefinch_lumberjack_v2//:lumberjack_v2"],
)

go_test(
    name = "log_test",
    srcs = ["log_test.go"],
    embed = [":log"],
)
