load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "session",
    srcs = [
        "approval_automation.go",
        "approval_policy.go",
        "circular_buffer.go",
        "claude_command_builder.go",
        "claude_controller.go",
        "claude_session_manager.go",
        "command_executor.go",
        "command_history.go",
        "command_queue.go",
        "context_options.go",
        "contexts.go",
        "controller_manager.go",
        "ent_repository.go",
        "external_approval.go",
        "external_discovery.go",
        "external_streamer.go",
        "external_tmux_streamer.go",
        "git_worktree_manager.go",
        "github_metadata.go",
        "health.go",
        "history.go",
        "instance.go",
        "instance_status.go",
        "instance_workspace.go",
        "load_options.go",
        "migrate.go",
        "pr_tracking.go",
        "pty_access.go",
        "pty_discovery.go",
        "repo_path.go",
        "repository.go",
        "response_stream.go",
        "review_queue.go",
        "review_queue_poller.go",
        "review_state.go",
        "session.go",
        "state_machine.go",
        "status_mapping.go",
        "storage.go",
        "tag_manager.go",
        "terminal_state.go",
        "tmux_process_manager.go",
        "types.go",
    ],
    importpath = "github.com/tstapler/stapler-squad/session",
    visibility = ["//visibility:public"],
    deps = [
        "//gen/proto/go/session/v1:session",
        "//github",
        "//log",
        "//server/analytics",
        "//session/detection",
        "//session/ent",
        "//session/ent/claudemetadata",
        "//session/ent/claudesession",
        "//session/ent/diffstats",
        "//session/ent/session",
        "//session/ent/tag",
        "//session/ent/worktree",
        "//session/git",
        "//session/mux",
        "//session/queue",
        "//session/tmux",
        "//session/vcs",
        "@com_github_atotto_clipboard//:clipboard",
        "@com_github_mattn_go_sqlite3//:go-sqlite3",
        "@com_github_spaolacci_murmur3//:murmur3",
        "@io_entgo_ent//dialect",
        "@io_entgo_ent//dialect/sql",
    ],
)

go_test(
    name = "session_test",
    srcs = [
        "approval_automation_test.go",
        "approval_policy_test.go",
        "circular_buffer_test.go",
        "claude_command_builder_test.go",
        "claude_controller_test.go",
        "command_executor_test.go",
        "command_history_test.go",
        "command_queue_test.go",
        "comprehensive_session_creation_test.go",
        "ent_repository_test.go",
        "github_metadata_test.go",
        "health_test.go",
        "instance_approve_deny_test.go",
        "instance_concurrency_test.go",
        "instance_last_acknowledged_test.go",
        "instance_rename_test.go",
        "instance_tags_test.go",
        "instance_test.go",
        "instance_timestamp_signature_test.go",
        "instance_timestamp_test.go",
        "integration_test.go",
        "load_options_test.go",
        "migrate_test.go",
        "pty_access_test.go",
        "pty_discovery_test.go",
        "response_stream_test.go",
        "review_queue_example_test.go",
        "review_queue_poller_test.go",
        "review_queue_test.go",
        "review_queue_uncommitted_changes_test.go",
        "session_creation_test.go",
        "session_restart_test.go",
        "session_test.go",
        "state_machine_test.go",
        "status_mapping_test.go",
        "storage_test.go",
        "tag_manager_test.go",
        "terminal_state_integration_test.go",
        "terminal_state_test.go",
        "test_helpers_test.go",
    ],
    embed = [":session"],
    deps = [
        "//gen/proto/go/session/v1:session",
        "//log",
        "//session/detection",
        "//session/git",
        "//session/tmux",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
