load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "telemetry",
    srcs = [
        "attributes.go",
        "telemetry.go",
    ],
    importpath = "github.com/tstapler/stapler-squad/telemetry",
    visibility = ["//visibility:public"],
    deps = [
        "//log",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel//semconv/v1.24.0:v1_24_0",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc//:otlptracegrpc",
        "@io_opentelemetry_go_otel_sdk//resource",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)
