load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "services",
    srcs = [
        "analytics_store.go",
        "approval_handler.go",
        "approval_service.go",
        "approval_store.go",
        "circuit_breaker_handler.go",
        "classifier.go",
        "claude_settings_parser.go",
        "command_parser.go",
        "config_service.go",
        "connectrpc_websocket.go",
        "database_service.go",
        "debug_snapshot.go",
        "domain_checker.go",
        "escape_code_handler.go",
        "event_converter.go",
        "exec_unix.go",
        "exec_windows.go",
        "external_websocket.go",
        "github_service.go",
        "notification_service.go",
        "rate_limiter.go",
        "review_queue_service.go",
        "rules_service.go",
        "rules_store.go",
        "search_service.go",
        "secret_scanner.go",
        "session_service.go",
        "terminal_websocket.go",
        "utility_service.go",
        "workspace_service.go",
    ],
    importpath = "github.com/tstapler/stapler-squad/server/services",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//executor",
        "//gen/proto/go/session/v1:session",
        "//gen/proto/go/session/v1/sessionv1connect",
        "//log",
        "//server/adapters",
        "//server/analytics",
        "//server/events",
        "//server/notifications",
        "//server/protocol",
        "//session",
        "//session/detection",
        "//session/scrollback",
        "//session/search",
        "//session/vc",
        "//session/vcs",
        "//telemetry",
        "@cc_mvdan_sh_v3//syntax",
        "@com_connectrpc_connect//:connect",
        "@com_github_fsnotify_fsnotify//:fsnotify",
        "@com_github_google_uuid//:uuid",
        "@com_github_gorilla_websocket//:websocket",
        "@com_github_mattn_go_sqlite3//:go-sqlite3",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_x_net//publicsuffix",
        "@org_golang_x_time//rate",
    ],
)

go_test(
    name = "services_test",
    srcs = [
        "approval_handler_integration_test.go",
        "classifier_test.go",
        "connectrpc_websocket_test.go",
        "rate_limiter_test.go",
        "secret_scanner_test.go",
        "session_service_test.go",
    ],
    embed = [":services"],
    deps = [
        "//gen/proto/go/session/v1:session",
        "//server/events",
        "//server/protocol",
        "//session",
        "@com_connectrpc_connect//:connect",
        "@com_github_gorilla_websocket//:websocket",
    ],
)
