# gazelle:prefix github.com/tstapler/stapler-squad/server/web

load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "web",
    srcs = ["embed.go"],
    embedsrcs = [
        "dist/404.html",
        "dist/404/index.html",
        "dist/_next/static/chunks/10-c9094a58e1de7611.js",
        "dist/_next/static/chunks/10-c9094a58e1de7611.js.map",
        "dist/_next/static/chunks/119-909e0e6e92a33f42.js",
        "dist/_next/static/chunks/119-909e0e6e92a33f42.js.map",
        "dist/_next/static/chunks/210-109a5e7b294b46a2.js",
        "dist/_next/static/chunks/210-109a5e7b294b46a2.js.map",
        "dist/_next/static/chunks/244-e16cb0b3ce8ba70b.js",
        "dist/_next/static/chunks/244-e16cb0b3ce8ba70b.js.map",
        "dist/_next/static/chunks/273-cee184c0432adc53.js",
        "dist/_next/static/chunks/273-cee184c0432adc53.js.map",
        "dist/_next/static/chunks/364-a4f991e6bc032cf7.js",
        "dist/_next/static/chunks/364-a4f991e6bc032cf7.js.map",
        "dist/_next/static/chunks/417-ed8c3b91c4d27230.js",
        "dist/_next/static/chunks/417-ed8c3b91c4d27230.js.map",
        "dist/_next/static/chunks/4bd1b696-9ee3d6f7e6a9d221.js",
        "dist/_next/static/chunks/4bd1b696-9ee3d6f7e6a9d221.js.map",
        "dist/_next/static/chunks/684-f28a4c52242ab6df.js",
        "dist/_next/static/chunks/684-f28a4c52242ab6df.js.map",
        "dist/_next/static/chunks/716.4ba7e0e849edc4e2.js",
        "dist/_next/static/chunks/716.4ba7e0e849edc4e2.js.map",
        "dist/_next/static/chunks/763-9c4e34e6b2591dd5.js",
        "dist/_next/static/chunks/763-9c4e34e6b2591dd5.js.map",
        "dist/_next/static/chunks/788-00642f7532d2fd12.js",
        "dist/_next/static/chunks/788-00642f7532d2fd12.js.map",
        "dist/_next/static/chunks/812-46ee1f014eab738d.js",
        "dist/_next/static/chunks/812-46ee1f014eab738d.js.map",
        "dist/_next/static/chunks/848-a578862d01416636.js",
        "dist/_next/static/chunks/848-a578862d01416636.js.map",
        "dist/_next/static/chunks/897.fe3773a39c8b406e.js",
        "dist/_next/static/chunks/897.fe3773a39c8b406e.js.map",
        "dist/_next/static/chunks/917.d21cf21ac8b73238.js",
        "dist/_next/static/chunks/917.d21cf21ac8b73238.js.map",
        "dist/_next/static/chunks/956-f8cc84eb5d850fd0.js",
        "dist/_next/static/chunks/956-f8cc84eb5d850fd0.js.map",
        "dist/_next/static/chunks/979-ce1b3c505d6d45d6.js",
        "dist/_next/static/chunks/979-ce1b3c505d6d45d6.js.map",
        "dist/_next/static/chunks/999.3a6e8d5f5c355f08.js",
        "dist/_next/static/chunks/999.3a6e8d5f5c355f08.js.map",
        "dist/_next/static/chunks/app/_not-found/page-a447ae26c74d61dd.js",
        "dist/_next/static/chunks/app/_not-found/page-a447ae26c74d61dd.js.map",
        "dist/_next/static/chunks/app/config/layout-e39d584ec526a24e.js",
        "dist/_next/static/chunks/app/config/page-4bca9e18d3447044.js",
        "dist/_next/static/chunks/app/config/page-4bca9e18d3447044.js.map",
        "dist/_next/static/chunks/app/debug/escape-codes/page-d70abf9d72003010.js",
        "dist/_next/static/chunks/app/debug/escape-codes/page-d70abf9d72003010.js.map",
        "dist/_next/static/chunks/app/history/layout-6fe5314bf9a3b0eb.js",
        "dist/_next/static/chunks/app/history/page-dbabea0b6d6c5b4a.js",
        "dist/_next/static/chunks/app/history/page-dbabea0b6d6c5b4a.js.map",
        "dist/_next/static/chunks/app/layout-abf70f23c3819a84.js",
        "dist/_next/static/chunks/app/layout-abf70f23c3819a84.js.map",
        "dist/_next/static/chunks/app/login/layout-ab8f6cae0459c5d5.js",
        "dist/_next/static/chunks/app/login/page-fb5e7f64ce99d486.js",
        "dist/_next/static/chunks/app/login/page-fb5e7f64ce99d486.js.map",
        "dist/_next/static/chunks/app/logs/layout-7357f4ffd3fe9fbc.js",
        "dist/_next/static/chunks/app/logs/page-f59dddb59dbe4e95.js",
        "dist/_next/static/chunks/app/logs/page-f59dddb59dbe4e95.js.map",
        "dist/_next/static/chunks/app/page-ac8ec8aa399329ae.js",
        "dist/_next/static/chunks/app/page-ac8ec8aa399329ae.js.map",
        "dist/_next/static/chunks/app/review-queue/layout-5f216e5ed7517c90.js",
        "dist/_next/static/chunks/app/review-queue/page-50e146c678fd322c.js",
        "dist/_next/static/chunks/app/review-queue/page-50e146c678fd322c.js.map",
        "dist/_next/static/chunks/app/rules/layout-97cd86b45e454458.js",
        "dist/_next/static/chunks/app/rules/page-5714b3cf292f59e2.js",
        "dist/_next/static/chunks/app/rules/page-5714b3cf292f59e2.js.map",
        "dist/_next/static/chunks/app/sessions/new/page-834dcc8ceca7eca3.js",
        "dist/_next/static/chunks/app/sessions/new/page-834dcc8ceca7eca3.js.map",
        "dist/_next/static/chunks/app/test-terminal/page-b87bbaa4fdf38a08.js",
        "dist/_next/static/chunks/app/test-terminal/page-b87bbaa4fdf38a08.js.map",
        "dist/_next/static/chunks/app/test/escape-codes/page-9978cd2ffdd763d4.js",
        "dist/_next/static/chunks/app/test/escape-codes/page-9978cd2ffdd763d4.js.map",
        "dist/_next/static/chunks/app/test/terminal-stress/page-bbcfa85990b9a704.js",
        "dist/_next/static/chunks/app/test/terminal-stress/page-bbcfa85990b9a704.js.map",
        "dist/_next/static/chunks/ba16dcd3-239e6350f0cb8778.js",
        "dist/_next/static/chunks/ba16dcd3-239e6350f0cb8778.js.map",
        "dist/_next/static/chunks/framework-86fb670d8a475d00.js",
        "dist/_next/static/chunks/framework-86fb670d8a475d00.js.map",
        "dist/_next/static/chunks/main-app-683ffb0ee41c0b87.js",
        "dist/_next/static/chunks/main-app-683ffb0ee41c0b87.js.map",
        "dist/_next/static/chunks/main-c5b3e3910992e982.js",
        "dist/_next/static/chunks/main-c5b3e3910992e982.js.map",
        "dist/_next/static/chunks/pages/_app-5e25a0b99d161c99.js",
        "dist/_next/static/chunks/pages/_app-5e25a0b99d161c99.js.map",
        "dist/_next/static/chunks/pages/_error-eea65028507279fe.js",
        "dist/_next/static/chunks/pages/_error-eea65028507279fe.js.map",
        "dist/_next/static/chunks/polyfills-42372ed130431b0a.js",
        "dist/config/index.html",
        "dist/config/index.txt",
        "dist/debug/escape-codes/index.html",
        "dist/debug/escape-codes/index.txt",
        "dist/history/index.html",
        "dist/history/index.txt",
        "dist/index.html",
        "dist/index.txt",
        "dist/login/index.html",
        "dist/login/index.txt",
        "dist/logs/index.html",
        "dist/logs/index.txt",
        "dist/review-queue/index.html",
        "dist/review-queue/index.txt",
        "dist/rules/index.html",
        "dist/rules/index.txt",
        "dist/sessions/new/index.html",
        "dist/sessions/new/index.txt",
        "dist/test-terminal/index.html",
        "dist/test-terminal/index.txt",
        "dist/test/escape-codes/index.html",
        "dist/test/escape-codes/index.txt",
        "dist/test/terminal-stress/index.html",
        "dist/test/terminal-stress/index.txt",
        "dist/_next/static/1PyaBjgB_E_giqtWoPhCB/_buildManifest.js",
        "dist/_next/static/1PyaBjgB_E_giqtWoPhCB/_ssgManifest.js",
        "dist/_next/static/chunks/webpack-f77e138d9d17ce39.js",
        "dist/_next/static/chunks/webpack-f77e138d9d17ce39.js.map",
        "dist/_next/static/css/d8e87c5ed3daf4e2.css",
        "dist/_next/static/css/d8e87c5ed3daf4e2.css.map",
    ],
    importpath = "github.com/tstapler/stapler-squad/server/web",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "dist_files",
    srcs = glob(["dist/**"]),
    visibility = ["//visibility:public"],
)
