load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "ent",
    srcs = [
        "claudemetadata.go",
        "claudemetadata_create.go",
        "claudemetadata_delete.go",
        "claudemetadata_query.go",
        "claudemetadata_update.go",
        "claudesession.go",
        "claudesession_create.go",
        "claudesession_delete.go",
        "claudesession_query.go",
        "claudesession_update.go",
        "client.go",
        "diffstats.go",
        "diffstats_create.go",
        "diffstats_delete.go",
        "diffstats_query.go",
        "diffstats_update.go",
        "ent.go",
        "generate.go",
        "mutation.go",
        "runtime.go",
        "session.go",
        "session_create.go",
        "session_delete.go",
        "session_query.go",
        "session_update.go",
        "tag.go",
        "tag_create.go",
        "tag_delete.go",
        "tag_query.go",
        "tag_update.go",
        "tx.go",
        "worktree.go",
        "worktree_create.go",
        "worktree_delete.go",
        "worktree_query.go",
        "worktree_update.go",
    ],
    importpath = "github.com/tstapler/stapler-squad/session/ent",
    visibility = ["//visibility:public"],
    deps = [
        "//session/ent/claudemetadata",
        "//session/ent/claudesession",
        "//session/ent/diffstats",
        "//session/ent/migrate",
        "//session/ent/predicate",
        "//session/ent/schema",
        "//session/ent/session",
        "//session/ent/tag",
        "//session/ent/worktree",
        "@io_entgo_ent//:ent",
        "@io_entgo_ent//dialect",
        "@io_entgo_ent//dialect/sql",
        "@io_entgo_ent//dialect/sql/sqlgraph",
        "@io_entgo_ent//schema/field",
    ],
)
