load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "git",
    srcs = [
        "diff.go",
        "util.go",
        "worktree.go",
        "worktree_branch.go",
        "worktree_git.go",
        "worktree_ops.go",
    ],
    importpath = "github.com/tstapler/stapler-squad/session/git",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//executor",
        "//log",
        "@com_github_go_git_go_git_v5//:go-git",
        "@com_github_go_git_go_git_v5//plumbing",
        "@com_github_go_git_go_git_v5//plumbing/object",
    ],
)

go_test(
    name = "git_test",
    srcs = ["util_test.go"],
    embed = [":git"],
)
