load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mux",
    srcs = [
        "autodiscover.go",
        "discovery.go",
        "hooks.go",
        "multiplexer.go",
        "picker.go",
        "protocol.go",
        "tmux_options.go",
    ],
    importpath = "github.com/tstapler/stapler-squad/session/mux",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_fsnotify_fsnotify//:fsnotify",
        "@org_golang_x_term//:term",
    ] + select({
        "@rules_go//go/platform:aix": [
            "//session/tmux",
            "@com_github_creack_pty//:pty",
        ],
        "@rules_go//go/platform:android": [
            "//session/tmux",
            "@com_github_creack_pty//:pty",
        ],
        "@rules_go//go/platform:darwin": [
            "//session/tmux",
            "@com_github_creack_pty//:pty",
        ],
        "@rules_go//go/platform:dragonfly": [
            "//session/tmux",
            "@com_github_creack_pty//:pty",
        ],
        "@rules_go//go/platform:freebsd": [
            "//session/tmux",
            "@com_github_creack_pty//:pty",
        ],
        "@rules_go//go/platform:illumos": [
            "//session/tmux",
            "@com_github_creack_pty//:pty",
        ],
        "@rules_go//go/platform:ios": [
            "//session/tmux",
            "@com_github_creack_pty//:pty",
        ],
        "@rules_go//go/platform:js": [
            "//session/tmux",
            "@com_github_creack_pty//:pty",
        ],
        "@rules_go//go/platform:linux": [
            "//session/tmux",
            "@com_github_creack_pty//:pty",
        ],
        "@rules_go//go/platform:netbsd": [
            "//session/tmux",
            "@com_github_creack_pty//:pty",
        ],
        "@rules_go//go/platform:openbsd": [
            "//session/tmux",
            "@com_github_creack_pty//:pty",
        ],
        "@rules_go//go/platform:osx": [
            "//session/tmux",
            "@com_github_creack_pty//:pty",
        ],
        "@rules_go//go/platform:plan9": [
            "//session/tmux",
            "@com_github_creack_pty//:pty",
        ],
        "@rules_go//go/platform:qnx": [
            "//session/tmux",
            "@com_github_creack_pty//:pty",
        ],
        "@rules_go//go/platform:solaris": [
            "//session/tmux",
            "@com_github_creack_pty//:pty",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "mux_test",
    srcs = [
        "autodiscover_test.go",
        "tmux_options_test.go",
    ],
    embed = [":mux"],
)
